Enhance TIM processing, documentation, and added support for IEEE signature data
- Updated TIM processing components to include handling of IEEE 1609.2 signed-message metadata.
- Enhanced the TIM converter to support optional signed data metadata and improved compliance tracking.
- Refactored geometry handling to calculate representative locations from region anchors and updated related tests for validation.
- Updated JSON schemas to reflect new fields for signed data metadata and certificate presence.